--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "description": "",
+  "description": "•https://damiancatanzaro.com/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nacho Caiafa",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NachoKai/catanzaro.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NachoKai/catanzaro/issues"
+  },
+  "homepage": "https://github.com/NachoKai/catanzaro#readme"
 }
