--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "project",
+  "name": "creacion-de-videojuegos-capitulo-3-sandbox-1",
   "version": "1.0.0",
-  "description": "•https://damiancatanzaro.com/",
-  "main": "index.js",
+  "description": "",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "serve"
   },
-  "author": "Nacho Caiafa",
-  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NachoKai/catanzaro.git"
+    "url": "git+https://github.com/codesandbox-app/static-template.git"
   },
+  "keywords": [],
+  "author": "Ives van Hoorne",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/NachoKai/catanzaro/issues"
+    "url": "https://github.com/codesandbox-app/static-template/issues"
   },
-  "homepage": "https://github.com/NachoKai/catanzaro#readme"
+  "homepage": "https://github.com/codesandbox-app/static-template#readme",
+  "devDependencies": {
+    "serve": "^11.2.0"
+  }
 }
